Update and rename README.md to .md

--- a/docs/03_Herramientas/Slider_Página_Inicio/.md
+++ b/docs/03_Herramientas/Slider_Página_Inicio/.md
@@ -5,7 +5,7 @@ date: 2025-02-27
 author: Adrián González
 ---
 
-# Crear un SLIDER para la página de inicio de la web
+# Crear un SLIDER para la página de inicio
 
 !!! note
 
